--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 <body>
     <div class="game">
-        <h1 class="game-title">Kámen, nůžky papír</h1>
+        <h1 class="game-title">Kámen, nůžky, papír</h1>
         <div class="game-btns">
             <button class="game-btn rock">Kámen</button>
             <button class="game-btn scissors">Nůžky</button>
             <button class="game-btn paper">Papír</button>
         </div>
-        <p class="game-winner">Počítač vyhrává</p>
+        <p class="game-winner"></p>
+        <p class="game-choices"></p>
         <p class="game-round">Kolo:</p>
         <p class="game-score__human">Tvé score: </p>
         <p class="game-score__computer">Počítač:</p>
+        <button class="game-btn restart">Restart hry</button>
     </div>
 
     <script src="script.js"></script>
