historie je asi finiš

--- a/index.html
+++ b/index.html
@@ -24,21 +24,33 @@
       </div>
       <div class="game-history">
         <div>
-            <h2 class="game-history__title">Historie výsledků</h2>
-            <div class="game-history__score">
-              <div class="game-history__score--human">
-                <h3 class="score-title">Člověk</h3>
-                <p>
-                  Lorem ipsum Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse natus voluptatem cumque consectetur, odit assumenda quam vitae eum, dolores quo veniam delectus doloribus distinctio, earum deleniti ipsa quasi eos et Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius placeat rem nam facere ut, illo, recusandae reprehenderit nostrum voluptatibus dolores perspiciatis neque commodi quaerat reiciendis accusantium velit vel dolor debitis.
-                </p>
-              </div>
-              <div class="game-history__score--computer">
-                <h3 class="score-title">Počítač</h3>
-                <p>
-                  Lorem ipsum
-                </p>
-              </div>
+          <h2 class="game-history__title">Historie výsledků</h2>
+          <div class="score-title-flex">
+            <h3 class="score-title">Člověk</h3>
+            <h3 class="score-title">Počítač</h3>
+          </div>
+          <div class="game-history__score">
+            <div class="game-history__score--human">
+              <p class="score-text" id="human">
+                1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1
+                <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1
+                <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1
+                <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />
+              </p>
             </div>
+            <div class="game-history__score--computer">
+              <p class="score-text" id="computer">
+                20 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1
+                <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1
+                <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1
+                <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="results">
+          <h4 class="results-score">1000</h4>
+          <h4 class="results-score">1000</h4>
         </div>
         <button class="game-btn clear">Vyčistit historii</button>
       </div>
