--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <div class="game-section">
       <div class="game">
         <h1 class="game-title">Kámen, nůžky, papír</h1>
+        <div class="game-rounds">
+          <h3 class="game-rounds-title">Kolik kol chceš hrát?</h3>
+
+          <button class="game-btn rounds rounds5">5</button
+          ><button class="game-btn rounds rounds10">10</button
+          ><button class="game-btn rounds rounds15">15</button
+          ><button class="game-btn rounds rounds20">20</button>
+        </div>
         <div class="game-btns">
           <button class="game-btn rock">Kámen</button>
           <button class="game-btn scissors">Nůžky</button>
