--- a/index.html
+++ b/index.html
@@ -39,20 +39,10 @@
           </div>
           <div class="game-history__score">
             <div class="game-history__score--human">
-              <p class="score-text" id="human">
-                1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1
-                <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1
-                <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1
-                <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />
-              </p>
+              <p class="score-text" id="human"></p>
             </div>
             <div class="game-history__score--computer">
-              <p class="score-text" id="computer">
-                20 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1
-                <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1
-                <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />1
-                <br />1 <br />1 <br />1 <br />1 <br />1 <br />1 <br />
-              </p>
+              <p class="score-text" id="computer"> </p>
             </div>
           </div>
         </div>
