responzivita a sčítání score

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           </div>
         </div>
         <div class="results">
-          <h4 class="results-score">1000</h4>
-          <h4 class="results-score">1000</h4>
+          <h4 class="results-score results-score-human">0</h4>
+          <h4 class="results-score results-score-computer">0</h4>
         </div>
         <button class="game-btn clear">Vyčistit historii</button>
       </div>
