--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Kámen, nůžky, papír">
+    <meta property="og:image" content="./img/knp.png">
+    <meta property='og:description' content='Hra'/>
+    <meta property='og:url' content='https://sweetxhenia.github.io/PRS/'/>
     <title>Kámen, nůžky, papír</title>
     <link rel="stylesheet" href="style.css" />
   </head>
