--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Kámen, nůžky, papír">
-    <meta property="og:image" content="./img/knp2.jpg">
+    <meta property="og:image" content="https://sweetxhenia.github.io/PRS/img/knp2.jpg">
     <meta property='og:description' content='Hra'/>
     <meta property='og:url' content='https://sweetxhenia.github.io/PRS/'/>
     <title>Kámen, nůžky, papír</title>
